{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 30,
  "lineage": "8c385039-fa9e-862a-e2d3-e32958e8f738",
  "resources": [
    {
      "module": "module.bastionhost",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-027903bb86e4ea454",
            "arn": "arn:aws:ec2:ap-south-2:636768524979:instance/i-085636982c9c8073e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085636982c9c8073e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "SaiShiva-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f9228b20dbf2b29f"
              }
            ],
            "primary_network_interface_id": "eni-0f9228b20dbf2b29f",
            "private_dns": "ip-10-0-0-37.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.37",
            "public_dns": "ec2-18-60-105-18.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.60.105.18",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01c97827cbabdbfe6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-07e06b04a42733095"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed1226b150ea4ca6",
            "tags": {
              "Name": "BastionHost"
            },
            "tags_all": {
              "Name": "BastionHost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07e06b04a42733095"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-085636982c9c8073e",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.bastionhost.aws_security_group.bastion_sg",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastionhost",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:security-group/sg-07e06b04a42733095",
            "description": "Allow SSH from your IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e06b04a42733095",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "636768524979",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BastionSG"
            },
            "tags_all": {
              "Name": "BastionSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "sg-07e06b04a42733095",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-027903bb86e4ea454",
            "arn": "arn:aws:ec2:ap-south-2:636768524979:instance/i-0297db0a462ef637c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0297db0a462ef637c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "SaiShiva-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02ad8094ebc56ba99"
              }
            ],
            "primary_network_interface_id": "eni-02ad8094ebc56ba99",
            "private_dns": "ip-10-0-0-207.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.207",
            "public_dns": "ec2-16-112-18-110.ap-south-2.compute.amazonaws.com",
            "public_ip": "16.112.18.110",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a91c6a8b0339544a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0725d8a4af31ee787"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed1226b150ea4ca6",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0725d8a4af31ee787"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-0297db0a462ef637c",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.jenkins.aws_security_group.jenkins_sg",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:security-group/sg-0725d8a4af31ee787",
            "description": "Allow SSH and Jenkins UI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0725d8a4af31ee787",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "636768524979",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "sg-0725d8a4af31ee787",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0441e67fc8f8d2130",
            "arn": "arn:aws:ec2:ap-south-2:636768524979:elastic-ip/eipalloc-0441e67fc8f8d2130",
            "domain": "vpc",
            "id": "eipalloc-0441e67fc8f8d2130",
            "network_border_group": "ap-south-2",
            "public_dns": "ec2-98-130-137-203.ap-south-2.compute.amazonaws.com",
            "public_ip": "98.130.137.203",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:internet-gateway/igw-042a9a2359fea9246",
            "id": "igw-042a9a2359fea9246",
            "owner_id": "636768524979",
            "region": "ap-south-2",
            "tags": {
              "Name": "track1-dev-igw"
            },
            "tags_all": {
              "Name": "track1-dev-igw"
            },
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0441e67fc8f8d2130",
            "association_id": "eipassoc-0d17cb3ec4f1ec060",
            "connectivity_type": "public",
            "id": "nat-0ed4c5763777d3736",
            "network_interface_id": "eni-0cbb30dadef630d5a",
            "private_ip": "10.0.0.81",
            "public_ip": "98.130.137.203",
            "region": "ap-south-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ed1226b150ea4ca6",
            "tags": {
              "Name": "track1-dev-nat-gateway"
            },
            "tags_all": {
              "Name": "track1-dev-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:route-table/rtb-0f4c5d369f0ddf42d",
            "id": "rtb-0f4c5d369f0ddf42d",
            "owner_id": "636768524979",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ed4c5763777d3736",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "track1-dev-private-rt"
            },
            "tags_all": {
              "Name": "track1-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "rtb-0f4c5d369f0ddf42d",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:route-table/rtb-06e9d73e72bd16a33",
            "id": "rtb-06e9d73e72bd16a33",
            "owner_id": "636768524979",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042a9a2359fea9246",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "track1-dev-public-rt"
            },
            "tags_all": {
              "Name": "track1-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "rtb-06e9d73e72bd16a33",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0960281b54dfddea7",
            "region": "ap-south-2",
            "route_table_id": "rtb-0f4c5d369f0ddf42d",
            "subnet_id": "subnet-096339d479424f07d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_a",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4cc3ef1a61c3240",
            "region": "ap-south-2",
            "route_table_id": "rtb-0f4c5d369f0ddf42d",
            "subnet_id": "subnet-0365813c1d5b932ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private_b",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f0052ae1d491820",
            "region": "ap-south-2",
            "route_table_id": "rtb-06e9d73e72bd16a33",
            "subnet_id": "subnet-0ed1226b150ea4ca6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fb50f32a8762120",
            "region": "ap-south-2",
            "route_table_id": "rtb-06e9d73e72bd16a33",
            "subnet_id": "subnet-0d4d8c7e7c9d2a271"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:subnet/subnet-096339d479424f07d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096339d479424f07d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "track1-dev-private-subnet-a"
            },
            "tags_all": {
              "Name": "track1-dev-private-subnet-a"
            },
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-096339d479424f07d",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:subnet/subnet-0365813c1d5b932ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0365813c1d5b932ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "track1-dev-private-subnet-b"
            },
            "tags_all": {
              "Name": "track1-dev-private-subnet-b"
            },
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0365813c1d5b932ef",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:subnet/subnet-0ed1226b150ea4ca6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed1226b150ea4ca6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "track1-dev-public-subnet-a"
            },
            "tags_all": {
              "Name": "track1-dev-public-subnet-a"
            },
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0ed1226b150ea4ca6",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:subnet/subnet-0d4d8c7e7c9d2a271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4d8c7e7c9d2a271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636768524979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "track1-dev-public-subnet-b"
            },
            "tags_all": {
              "Name": "track1-dev-public-subnet-b"
            },
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "subnet-0d4d8c7e7c9d2a271",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:vpc/vpc-057577d7b218a017e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02581b3f06fa433ae",
            "default_route_table_id": "rtb-0e3a51216856bdae5",
            "default_security_group_id": "sg-07b4866e39fa3658a",
            "dhcp_options_id": "dopt-086a7956f453129ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-057577d7b218a017e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3a51216856bdae5",
            "owner_id": "636768524979",
            "region": "ap-south-2",
            "tags": {
              "Name": "track1-dev-vpc"
            },
            "tags_all": {
              "Name": "track1-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.sonar",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-027903bb86e4ea454",
            "arn": "arn:aws:ec2:ap-south-2:636768524979:instance/i-0e957bdca7b21e6a5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e957bdca7b21e6a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "SaiShiva-Ansible-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b68f4ed994ab3436"
              }
            ],
            "primary_network_interface_id": "eni-0b68f4ed994ab3436",
            "private_dns": "ip-10-0-0-82.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.82",
            "public_dns": "ec2-40-192-1-128.ap-south-2.compute.amazonaws.com",
            "public_ip": "40.192.1.128",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e3fb32a8d2b615ef",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-063b54f61e749e2a6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed1226b150ea4ca6",
            "tags": {
              "Name": "Sonar-Server"
            },
            "tags_all": {
              "Name": "Sonar-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-063b54f61e749e2a6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "i-0e957bdca7b21e6a5",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_a",
            "module.networking.aws_subnet.public_b",
            "module.networking.aws_vpc.main",
            "module.sonar.aws_security_group.sonar_sg"
          ]
        }
      ]
    },
    {
      "module": "module.sonar",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonar_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:636768524979:security-group/sg-063b54f61e749e2a6",
            "description": "Allow SSH and sonar UI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063b54f61e749e2a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sonar-sg",
            "name_prefix": "",
            "owner_id": "636768524979",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-057577d7b218a017e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636768524979",
            "id": "sg-063b54f61e749e2a6",
            "region": "ap-south-2"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}